# Coleccion-de-Ejercicios-Programacion-Estructurada

./: CMakeLists.txt  README.md  estructuras_funciones.h  main.c
Parte1/: estudiante.c  estudiante.h
Parte2/: uniones.c  uniones.h
Parte3/: copia_estructuras.c  copia_estructuras.h
Parte4/: alias_estructura.c  alias_estructura.h
Parte5/: estructuras_funciones.c
